--- a/vueTest/package.json
+++ b/vueTest/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9"
   }
 }
